tests/e2e-chainsaw/v1beta2/acl-pvc/redis-cluster/ready-cluster.yaml
---
apiVersion: redis.redis.opstreelabs.in/v1beta2
kind: RedisCluster
metadata:
  name: redis-cluster-acl-pvc
status:
  readyFollowerReplicas: 3
  readyLeaderReplicas: 3
  state: Ready
  reason: RedisCluster is ready
